kube/inflex-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inflex-server
  labels:
    app: inflex-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inflex-server
  template:
    metadata:
      labels:
        app: inflex-server
    spec:
      volumes:
      - name: config-yml
        secret:
          secretName: inflex-server-config
      imagePullSecrets:
      - name: gitlab-registry
      containers:
      - name: inflex-server
        # image: "registry.gitlab.com/sky-above/inflex/prod@sha256:3728cf2b7110619cda58dc0f19fb95d736350a17b681df7c621f2c889109ae4c"
        # image: "registry.gitlab.com/sky-above/inflex/prod@sha256:0ce6effd74c36a87b16f98f7d810a11068755fda22ae0418c4aaa53568e33ee1"
        # image: "registry.gitlab.com/sky-above/inflex/prod@sha256:5ff10ab38961fec5a0720ec11a870886f38988e2c74df1b5b5bd1b9c19b1bbcc"
        image: "registry.gitlab.com/sky-above/inflex/prod@sha256:6050dac5ed1d6937b56ab6aed5da16a4e6313229133f7cf37546a38e5a59c222"
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: config-yml
          mountPath: "/etc/inflex/"
          readOnly: true
        readinessProbe:
          httpGet:
            path: "/health"
            port: 80
          initialDelaySeconds: 1
          periodSeconds: 2
        livenessProbe:
          httpGet:
            path: "/health"
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 30
        ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: inflex-server
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: inflex-server
