kube/lbtest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lbtest
  labels:
    app: lbtest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lbtest
  template:
    metadata:
      labels:
        app: lbtest
    spec:
      containers:
      - name: lbtest
        image: chrisdone/lbtest
        imagePullPolicy: IfNotPresent
        readinessProbe:
          httpGet:
            path: "/ping"
            port: 80
          initialDelaySeconds: 1
          periodSeconds: 2
        livenessProbe:
          httpGet:
            path: "/ping"
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 30
        ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: lbtest
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: lbtest
